# Kulyk-goit-PythonWeb-HW-12

./: docker-compose.yml  main.py  pyproject.toml  readme.txt  test.db  test.py
docs/source/: conf.py  index.rst
migrations/: env.py
migrations/versions/: 2469256ceece_init.py  2ee682ce5543_init.py  5a5b556f635d_init.py  5e1a1e9d0cd1_init.py  961bfbc07858_init.py  b9dcb93948be_init.py  e5e10c028a18_init.py
postgres-data/: postmaster.pid
postgres-data/base/13481/: pg_internal.init
postgres-data/base/16384/: 1247  1249  1259  16385  16388  16390  16399  16401  16402  16403  16405  16406  16408  16412  16419  16420  16421  16427  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  2678  2679  2699  (+7 more)
postgres-data/base/16439/: 1247  1249  1259  16440  16443  16445  16447  16453  16454  16456  16457  16458  16459  16460  16461  16463  16467  16474  16475  16476  16482  2224  2579  2604  2606  2608  2610  2620  2656  2657  2658  2659  2662  2663  2664  2665  2666  2667  2673  2674  (+10 more)
postgres-data/global/: 1262  2671  2672  pg_control  pg_internal.init
postgres-data/pg_stat/: db_0.stat  db_13481.stat  db_16384.stat  db_16439.stat  global.stat
postgres-data/pg_stat_tmp/: db_0.stat  db_13481.stat  db_16384.stat  db_16439.stat  global.stat
src/: schemas.py
src/conf/: config.py
src/database/: db.py  models.py
src/repository/: contacts.py  users.py
src/routes/: auth.py  contacts.py  users.py
src/services/: auth.py  email.py
tests/: conftest.py  test.db  test_route_auth.py  test_unit_repository_contacts.py  test_unit_repository_users.py
