[tool.poetry]
name = "kulyk-goit-pythonweb-hw-12"
version = "0.1.0"
description = ""
authors = ["evgen-kulik <e.kulik.atom@gmail.com>"]
readme = "README.md"
packages = [{include = "kulyk_goit_pythonweb_hw_12"}]

[tool.poetry.dependencies]
python = "^3.10"
uvicorn = {extras = ["standard"], version = "^0.23.2"}
python-jose = {extras = ["cryptography"], version = "^3.3.0"}
python-multipart = "^0.0.6"
passlib = {extras = ["bcrypt"], version = "^1.7.4"}
python-dotenv = "^1.0.0"
pydantic = "1.10.7"
fastapi = "0.95.0"
fastapi-mail = "1.2.7"
sqlalchemy = "2.0.7"
redis = "4.5.1"
alembic = "1.10.2"
psycopg2 = "2.9.5"
fastapi-limiter = "0.1.5"
cloudinary = "1.32.0"
libgravatar = "1.0.3"
pytest = "^7.4.2"
pytest-mock = "^3.11.1"
pytest-cov = "^4.1.0"

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.poetry.group.dev.dependencies]
sphinx = "^7.2.6"
pytest-cov = "^4.1.0"


[tool.poetry.group.test.dependencies]
httpx = "^0.25.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
